objects/LBI__DefaultMappingLead__mdt.object
<CustomObject>
    <description>Default Lead Mapping</description>
    <fields>
        <fullName>LBI__DefaultValue__c</fullName>
        <label>Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__IsRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBI__SourceFieldName__c</fullName>
        <label>Source Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__SourceObject__c</fullName>
        <label>Source Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__TargetFieldName__c</fullName>
        <label>Target Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LBI__TargetObject__c</fullName>
        <label>Target Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Default Lead Mapping</label>
    <pluralLabel>Default Lead Mappings</pluralLabel>
</CustomObject>